@@ -2,10 +2,6 @@
 Bug #30638 (localeconv returns wrong LC_NUMERIC settings) (ok to fail on MacOS X)
 --SKIPIF--
 <?php  # try to activate a german locale
-if (substr(PHP_OS, 0, 3) == 'WIN') {
-    /* skip on windows until #63688 was fixed */
-    die('skip');
-}
 if (setlocale(LC_NUMERIC, "de_DE.UTF-8", "de_DE", "de", "german", "ge", "de_DE.ISO-8859-1") === FALSE) {
 	print "skip setlocale() failed";
 } elseif (strtolower(php_uname('s')) == 'darwin') {
